@@ -1,3 +1,11 @@
+2020-01-10  Tobias Burnus  <tobias@codesourcery.com>
+
+	Backported from mainline
+	2020-01-09  Tobias Burnus  <tobias@codesourcery.com>
+
+	PR fortran/84135
+	* gfortran.dg/coarray/codimension_3.f90: New.
+
 2020-01-07  Iain Sandoe  <iain@sandoe.co.uk>
 
 	Backport from mainline.
@@ -949,7 +957,7 @@
 
 	PR fortran/91660
 	* gfortran.dg/pdt_4.f03: Fix invalid code.
-        * gfortran.dg/pr91660_1.f90: New test.
+	* gfortran.dg/pr91660_1.f90: New test.
 	* gfortran.dg/pr91660_2.f90: Ditto.
 
 2019-09-04  Wilco Dijkstra  <wdijkstr@arm.com>
@@ -1000,7 +1008,7 @@
 2019-08-30  Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	PR fortran/91551
- 	* gfortran.dg/allocated_3.f90
+	* gfortran.dg/allocated_3.f90
 
 2019-08-30  Segher Boessenkool  <segher@kernel.crashing.org>
 
@@ -1967,7 +1975,7 @@
 	Backport fom mainline
 	2019-06-21  Jeff Law  <law@redhat.com>
 
-        PR tree-optimization/90949
+	PR tree-optimization/90949
 	* gcc.c-torture/execute/pr90949.c: New test.
 
 2019-06-26  Martin Jambor  <mjambor@suse.cz>
